Fix alignment of tags on pinned article

--- a/app/components/NavigationTab/NavigationTab.css
+++ b/app/components/NavigationTab/NavigationTab.css
@@ -39,7 +39,7 @@ span.backLabel {
 }
 
 .backIcon {
-  transition: transform 150ms ease-in-out;
+  transition: transform 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .back:hover > .backIcon {
