--- a/app/components/Tags/Tag.css
+++ b/app/components/Tags/Tag.css
@@ -7,7 +7,7 @@
 }
 
 .linkSpacing {
-  margin-right: 8px;
+  margin-right: 7px;
   display: inline;
 }
 
@@ -49,7 +49,6 @@
     var(--border-alpha)
   );
   display: inline-block;
-  box-sizing: border-box;
   padding: 1px 7px;
   border: 1px solid transparent;
   border-radius: 1em;
