--- a/app/routes/overview/components/Overview.css
+++ b/app/routes/overview/components/Overview.css
@@ -1,24 +1,5 @@
 @import '~app/styles/variables.css';
 
-.tagline {
-  display: inline-block;
-  white-space: nowrap;
-  vertical-align: middle;
-  overflow: hidden;
-  height: 28px;
-  width: 340px;
-  margin: 0;
-}
-
-.tag {
-  background-color: var(--color-mono-gray-4) !important;
-}
-
-.dot {
-  margin: 0 5px;
-  font-weight: 1000;
-}
-
 .header {
   padding: 0 0 0 10px;
   flex: 1;
@@ -55,8 +36,16 @@
   color: var(--color-dark-gray-5);
 }
 
-.item:hover .itemInfo {
-  color: black;
+.type {
+  margin-right: 4px;
+}
+
+.tagline {
+  display: inline-block;
+  white-space: nowrap;
+  transform: translateY(-7.5%);
+  vertical-align: middle;
+  overflow: hidden;
 }
 
 .otherItems {
